--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>Hello World</h1>
 
-my last hosting provider tanked, so I'm re-creating my page as a static jekyll site on githib pages.
+#my last hosting provider tanked, so I'm re-creating my page as a static jekyll site on githib pages.
 
-you can cruise https://EcstaticSec.tumblr.com if you're bored
+#you can cruise https://EcstaticSec.tumblr.com if you're bored
 
-))
+#))
