--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 #my last hosting provider tanked, so I'm re-creating my page as a static jekyll site on githib pages.
 
-#you can cruise https://EcstaticSec.tumblr.com if you're bored
+
+#you can cruise (https://EcstaticSec.tumblr.com) if you're bored
+
 
 #))
