--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 #my last hosting provider tanked, so I'm re-creating my page as a static jekyll site on githib pages.
 
 
-#you can cruise (https://EcstaticSec.tumblr.com) if you're bored
+#you can cruise [EcstaticSec.tumblr.com](https://EcstaticSec.tumblr.com) if you're bored
 
 
 #))
