--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html class="staticrypt-html">
+<!--JG say Try Harder ;)-->
 <head>
     <meta charset="utf-8">
     <title>Hacker-proof Page ;)</title>
@@ -117,7 +118,7 @@
 <div class="staticrypt-page">
     <div class="staticrypt-form">
         <div class="staticrypt-instructions">
-            <p class="staticrypt-title">Protected Page</p>
+            <p class="staticrypt-title">Hacker-proof Page ;)</p>
             <p></p>
         </div>
 
