--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--JG say Try Harder ;)-->
 <head>
     <meta charset="utf-8">
-    <title>Hacker-proof Page ;)</title>
+    <title>JeremyGalloway.com</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- do not cache this page -->
@@ -118,7 +118,7 @@
 <div class="staticrypt-page">
     <div class="staticrypt-form">
         <div class="staticrypt-instructions">
-            <p class="staticrypt-title">Hacker-proof Page ;)</p>
+            <p class="staticrypt-title">🍺🔒🔪😉Hack-proof?😅💣🔫🗝</p>
             <p></p>
         </div>
 
