--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             decryptedHMAC = CryptoJS.HmacSHA256(encryptedHTML, CryptoJS.SHA256(passphrase)).toString();
 
         if (decryptedHMAC !== encryptedHMAC) {
-            alert('Bad passphrase! JG say Try Harder! ;)');
+            alert('😂😂😂Bad passphrase!😂😂😂 JG say Try Harder! ;)');
             return;
         }
 
