--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <div class="staticrypt-page">
     <div class="staticrypt-form">
         <div class="staticrypt-instructions">
-            <p class="staticrypt-title">🍺🔒🔪😉Hack-proof?😅💣🔫🗝</p>
+            <p class="staticrypt-title">🍺🔒😉Hack-proof?😅💣🗝</p>
             <p></p>
         </div>
 
