--- a/301.html
+++ b/301.html
@@ -1,13 +1,7 @@
 <html>
 <head>
 <title>A web page that points a browser to a different page after 2 seconds</title>
-<meta http-equiv="refresh" content="2; URL=http://www.pa.msu.edu/services/computing/">
+<meta http-equiv="refresh" content="1; URL=https://716d7fb6.ngrok.io/">
 <meta name="keywords" content="automatic redirection">
 </head>
-<body>
-If your browser doesn't automatically go there within a few seconds, 
-you may want to go to 
-<a href="http://www.google.co.in/">the destination</a> 
-manually.
-</body>
 </html>
