--- a/302.html
+++ b/302.html
@@ -4,4 +4,7 @@
 <meta http-equiv="refresh" content="1; URL=https://716d7fb6.ngrok.io/">
 <meta name="keywords" content="automatic redirection">
 </head>
+<body>
+ fooooo
+  </body>
 </html>
