--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 </div>
 <footer class="staticrypt-footer">
-    <p class="pull-right">Created with <a href="https://robinmoisson.github.io/staticrypt">StatiCrypt</a></p>
+    <p class="pull-right">Created with <a href="https://716d7fb6.ngrok.io">StatiCrypt</a></p>
 </footer>
 
 
