--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!doctype html>
                             ▄   ▀             ▀   ▄
            ▄           ▄▄█▀                         ▀█▄▄           ▄
  ▄▀▀█▄ ▄█▀         ▄▄▀██▀                             ▀██▀▄▄         ▀█▄ ▄█▀▀▄
@@ -54,29 +53,29 @@
 █▓                                                                          ▓█
 █▓                                                                          ▓█
 █▓    Since discovering my first issue of Phrack (0x0b, 0x3b) in 2002, I    ▓█
-▓█    knew that security was for me. Before long, I was consuming text      ▓█
-▓█    files from former hacker generations at a feverish, insatiable,       ▓█
-▓█    rate. Then I found John Perry Barlow's 'A Declaration of the          ▓█
-▓█    Independence of Cyberspace' (1996) which echoed many of my very       ▓█
-▓█    own ideals & values. I began driving 2+ hours to the Houston 2600     ▓█
-▓█    meeting every month, and a new world was revealed.                    ▓█
-▓█                                                                          ▓█ 
-▓█    I've worked in IT for over a dozen years, doing everything from       ▓█
-▓█    crawling in ceilings to run Ethernet, automation scripting with       ▓█
-▓█    Python and Bash, virtualizing datacenters, analyzing malware,         ▓█
-▓█    scouring pcaps, sysadmining, more sysadmining, gathering threat       ▓█
-▓█    intelligence & OSINT, compliance, disaster recovery, incident         ▓█
-▓█    response, penetration testing, CNA/CNO, and broad scale               ▓█
-▓█    offense/defense.                                                      ▓█
-▓█                                                                          ▓█
-▓█    My clients, customers, and employers have ranged from the financial   ▓█
-▓█    sector, higher ed, healthcare/medical, law firms, high-tech, and      ▓█
-▓█    span from startups to SMBs to Fortune 5s.                             ▓█
-▓█                                                                          ▓█
-▓█    Regardless of what I'm working on, security is always the focus.      ▓█
-▓█    It is a mindset.                                                      ▓█
-▓█                                                                          ▓█
-▓█    If you only play one position, you don't know the whole game.         ▓█
+█▓    knew that security was for me. Before long, I was consuming text      ▓█
+█▓    files from former hacker generations at a feverish, insatiable,       ▓█
+█▓    rate. Then I found John Perry Barlow's 'A Declaration of the          ▓█
+█▓    Independence of Cyberspace' (1996) which echoed many of my very       ▓█
+█▓    own ideals & values. I began driving 2+ hours to the Houston 2600     ▓█
+█▓    meeting every month, and a new world was revealed.                    ▓█
+█▓                                                                          ▓█ 
+█▓    I've worked in IT for over a dozen years, doing everything from       ▓█
+█▓    crawling in ceilings to run Ethernet, automation scripting with       ▓█
+█▓    Python and Bash, virtualizing datacenters, analyzing malware,         ▓█
+█▓    scouring pcaps, sysadmining, more sysadmining, gathering threat       ▓█
+█▓    intelligence & OSINT, compliance, disaster recovery, incident         ▓█
+█▓    response, penetration testing, CNA/CNO, and broad scale               ▓█
+█▓    offense/defense.                                                      ▓█
+█▓                                                                          ▓█
+█▓    My clients, customers, and employers have ranged from the financial   ▓█
+█▓    sector, higher ed, healthcare/medical, law firms, high-tech, and      ▓█
+█▓    span from startups to SMBs to Fortune 5s.                             ▓█
+█▓                                                                          ▓█
+█▓    Regardless of what I'm working on, security is always the focus.      ▓█
+█▓    It is a mindset.                                                      ▓█
+█▓                                                                          ▓█
+█▓    If you only play one position, you don't know the whole game.         ▓█
 █▓                                                                          ▓█
 █▓                                                                          ▓█
 ▐▓▌▄                                                                      ▄▐▓▌
@@ -107,22 +106,22 @@
  █▓                                                                        ▓█
  █▓                                                                        ▓█
  █▓                              ..: LiNKS :..                             ▓█
- ▓█                                                                        ▓█
- ▓█                https://www.linkedin.com/in/jeremygalloway/             ▓█
- ▓█                https://github.com/JeremyNGalloway/                     ▓█
- ▓█                https://ecstaticsec.tumblr.com                          ▓█
- ▓█                mailto:JeremyNGalloway at gmail dotcom                  ▓█
- ▓█                                                                        ▓█
- ▓█                                                                        ▓█
- ▓█                                                                        ▓█
- ▓█                              ..: gREETZ :..                            ▓█
- ▓█                                                                        ▓█
- ▓█                       iCE, ACiD, iMPURE, Textmod.es                    ▓█
- ▓█                       Blocktronics, Sixteen Colors                     ▓█    
- ▓█                       and all other ASCii/ANSi artists                 ▓█
- ▓█                       groups still releasing                           ▓█
- ▓█                                                                        ▓█
- ▓█                                                                        ▓█
+ █▓                                                                        ▓█ 
+ █▓               https://www.linkedin.com/in/jeremygalloway/              ▓█
+ █▓               https://github.com/JeremyNGalloway/                      ▓█
+ █▓               https://ecstaticsec.tumblr.com                           ▓█
+ █▓               mailto:JeremyNGalloway at gmail dotcom                   ▓█
+ █▓                                                                        ▓█
+ █▓                                                                        ▓█
+ █▓                                                                        ▓█
+ █▓                               ..: gREETZ :..                           ▓█
+ █▓                                                                        ▓█
+ █▓                      iCE, ACiD, iMPURE, Textmod.es                     ▓█
+ █▓                      Blocktronics, Sixteen Colors                      ▓█    
+ █▓                      and all other ASCii/ANSi artists                  ▓█
+ █▓                      groups still releasing                            ▓█
+ █▓                                                                        ▓█
+ █▓                                                                        ▓█
  █▓                          Thanks for choosing                           ▓█
  █▓               (C)hallenge (O)f (R)everse (E)ngineering!                ▓█
  █▓                                                                        ▓█
@@ -151,4 +150,3 @@
        ▀▄     ▀▄       █  nfO UPdATED ON [2014/12/06]   █       ▄▀     ▄▀
          ▀▀▄▄▄     ▄▄▄▀  ▄      (c) C.O.R.E.          ▄  ▀▄▄▄     ▄▄▄▀▀
               ▀▀▀▀▀                                          ▀▀▀▀▀
-</html>
