--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<body>
+<p>
+
                             ▄   ▀             ▀   ▄
            ▄           ▄▄█▀                         ▀█▄▄           ▄
  ▄▀▀█▄ ▄█▀         ▄▄▀██▀                             ▀██▀▄▄         ▀█▄ ▄█▀▀▄
@@ -150,3 +153,5 @@
        ▀▄     ▀▄       █  nfO UPdATED ON [2014/12/06]   █       ▄▀     ▄▀
          ▀▀▄▄▄     ▄▄▄▀  ▄      (c) C.O.R.E.          ▄  ▀▄▄▄     ▄▄▄▀▀
               ▀▀▀▀▀                                          ▀▀▀▀▀
+  </p>
+</body>
