--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <body>
-<p>
+<PRE>
 
                             ▄   ▀             ▀   ▄
            ▄           ▄▄█▀                         ▀█▄▄           ▄
@@ -153,5 +153,5 @@
        ▀▄     ▀▄       █  nfO UPdATED ON [2014/12/06]   █       ▄▀     ▄▀
          ▀▀▄▄▄     ▄▄▄▀  ▄      (c) C.O.R.E.          ▄  ▀▄▄▄     ▄▄▄▀▀
               ▀▀▀▀▀                                          ▀▀▀▀▀
-  </p>
+  </PRE>
 </body>
