--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 ■ ▐█                       *INCL.KEYMAKER.AND.PATCH*                       █▌ ■
   █▌                                                                       ▐█
  ▐█     Cracked by....:  CORE              Release-Name..:  JG-WWW_.ZIP    █▌
- ██     Supplied......:  CORE              Release-Date..:  2017/09/27      ██
- ██▌    Packaged......:  CORE              Release-Type..:  Landing page    ██
+ ██     Supplied......:  sELF              Release-Date..:  2017/09/27      ██
+ ██▌    Packaged......:  GiTHUB            Release-Type..:  Landing page    ██
  █▓▌    Protection....:  Serial            OS............:  Subgraph       ▐▓█
  ▐██    Crack/SN......:  Keymaker+Patch    Language......:  Cypherpunk     ██▌
  ▐██▌   Rating........:  [You decide!]     Disks.........:  31            ▐██▌
