--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
  █▓                                                                        ▓█ 
  █▓                      iCE, ACiD, iMPURE, Textmod.es                     ▓█
  █▓                      Blocktronics, Sixteen Colors                      ▓█    
- █▓                      and all other ASCii/ANSi artists                  ▓█
- █▓                      groups still releasing                            ▓█
+ █▓                      evoke, fuel and all other ASCii/ANSi              ▓█
+ █▓                      artist groups still releasing                     ▓█
  █▓                                                                        ▓█
  █▓                                                                        ▓█
  █▓                                                                        ▓█ 
