--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
  █▓                      BlackHat • SecTor • ISSW • MISP                   ▓█
  █▓                         IEEE • Friends of the EFF                      ▓█
  █▓                          Index of Cyber Security                       ▓█
+ █▓                            Effective Altruism                          ▓█
  █▓                             ███-REDACTED-███                           ▓█
  █▓                                                                        ▓█
  █▓                                                                        ▓█
