--- a/index.html
+++ b/index.html
@@ -55,30 +55,92 @@
  ▐▓     ▀■                     ..: DESCRiPTiON :..                         ▓▌
  █▓                                                                        ▓█
  █▓                                                                        ▓█
- █▓   Since discovering my first issue of Phrack (0x0b, 0x3b) in 2002, I   ▓█
- █▓   knew that security was for me. Before long, I was consuming text     ▓█
- █▓   files from former hacker generations at a feverish, insatiable,      ▓█
- █▓   rate. Then I found John Perry Barlow's 'A Declaration of the         ▓█
- █▓   Independence of Cyberspace' (1996) which echoed many of my very      ▓█
- █▓   own ideals & values. I began driving 2+ hours to the Houston 2600    ▓█
- █▓   meeting every month, and a new world was revealed.                   ▓█
- █▓                                                                        ▓█ 
- █▓   I've worked in IT for over a dozen years, doing everything from      ▓█
- █▓   crawling in ceilings to run Ethernet, automation scripting with      ▓█
- █▓   Python and Bash, virtualizing datacenters, analyzing malware,        ▓█
- █▓   scouring pcaps, sysadmining, more sysadmining, gathering threat      ▓█
- █▓   intelligence & OSINT, compliance, disaster recovery, incident        ▓█
- █▓   response, penetration testing, CNA/CNO, and broad scale              ▓█
- █▓   offense/defense.                                                     ▓█
- █▓                                                                        ▓█
- █▓   My clients, customers, and employers have ranged from the financial  ▓█
- █▓   sector, higher ed, healthcare/medical, law firms, high-tech, and     ▓█
- █▓   span from startups to SMBs to Fortune 5s.                            ▓█
- █▓                                                                        ▓█
- █▓   Regardless of what I'm working on, security is always the focus.     ▓█
- █▓   It is a mindset.                                                     ▓█
- █▓                                                                        ▓█
- █▓   If you only play one position, you don't know the whole game.        ▓█
+█▓   I was barely 13 years old when I watched the world panic and struggle   ▓█
+█▓   to prepare for the first global information catastrophe in history,     ▓█
+█▓   Y2K. The inevitable disaster that never came still taught an            ▓█
+█▓   invaluable, formative, lesson: Society is deeply reliant on computers   ▓█
+█▓   and networks and a single software bug could have a devastating global  ▓█
+█▓   impact. No government or military in the world could stop Y2K and that  ▓█
+█▓   demonstrated to me the sheer power of code and it's ability to be       ▓█
+█▓   exploited.                                                              ▓█
+█▓                                                                           ▓█
+█▓   Before long I obtained a free dial-up account and found myself          ▓█
+█▓   frequenting 'H/P/V/C/A/' webrings. The concept of 'illegal              ▓█
+█▓   information' was absolutely fascinating to me. There were text-files    ▓█
+█▓   for any illicit computer or telephony act you could think of, for       ▓█
+█▓   educational purposes of course (textfiles.org). Tools like AIM bots,    ▓█
+█▓   booters, flooders and 'warscripts' were more fun than any video game.   ▓█
+█▓   In fact, this wasn't a game at all, it was real life with real          ▓█
+█▓   consequences.                                                           ▓█
+█▓                                                                           ▓█
+█▓   I spent years learning the basics of breaking and repairing computers   ▓█
+█▓   and soon Napster would become a global phenomenon. Napster wasn't just  ▓█
+█▓   a revolutionary P2P program though; Napster was a person (Shawn         ▓█
+█▓   Fanning), a username and an important member of one of my favorite      ▓█
+█▓   hacking groups, w00w00. That same year, 'China Eagle Union' (Wan Tao)   ▓█
+█▓   hacked Whitehouse.gov and placed a Chinese flag on the homepage,        ▓█
+█▓   practically without consequence. It became abundantly clear to me that  ▓█
+█▓   new era of (public) cyber-war was dawning before my eyes. This was      ▓█
+█▓   evidence again that hackers can and will change the world drastically.  ▓█
+█▓                                                                           ▓█
+█▓   Warez boards, IRC chans, FXP rushing and the underground world of       ▓█
+█▓   piracy exposed me to the art and challenge of subverting software       ▓█
+█▓   security. Soon I'd complete my first 'crackme' and write my very own    ▓█
+█▓   keygen for a commercial product. I never even used the software;        ▓█
+█▓   cracking it was a merely a means to an end, an opportunity to really    ▓█
+█▓   understand the ins-and-outs.                                            ▓█
+█▓                                                                           ▓█
+█▓   Midway through high school my path became clear: understand how to      ▓█
+█▓   wield the formidable power of computer systems and learn how to         ▓█
+█▓   protect them from attack. I had already been remediating malware for    ▓█
+█▓   4+ years and was ready for much more. Soon I was driving 2 hours to     ▓█
+█▓   the Houston 2600 meeting at Ninfa's, where I'd be exposed to a world    ▓█
+█▓   of eggdrop servers, BNCs, and the infamous 'vim escape' privilege       ▓█
+█▓   escalation. These were 'real' hackers. Compared to them, I knew         ▓█
+█▓   nothing and I knew it. Nothing could've been more inspirational.        ▓█
+█▓   Phrack, Packetstorm and SecurityFocus became my new religion. John      ▓█
+█▓   Perry Barlow's 'A Declaration of the Independence of Cyberspace'        ▓█
+█▓   (1996) and The Mentor's 'The Conscience of a Hacker' became the         ▓█
+█▓   bedrock of my Internet philosophy. ‘The Cuckoo’s Egg’ and redacted      ▓█
+█▓   reports of MOONLIGHT MAZE, OP SUNDEVIL and the like became my history   ▓█
+█▓   books.                                                                  ▓█
+█▓                                                                           ▓█
+█▓   Countless nights and mornings were spent buried in the depths of        ▓█
+█▓   shadowy IRC channels and foreign language hacker boards. I was          ▓█
+█▓   consuming text files from former hacker generations at a feverish,      ▓█
+█▓   insatiable, rate. I nearly fell out of my chair when I discovered       ▓█
+█▓   ZF0's lurid publications of rapacious pwnage and spoolz. Life online    ▓█
+█▓   was becoming further and further abstracted. I've always had a very     ▓█
+█▓   active life offline, but the world of the green and black terminal was  ▓█
+█▓   exciting, always promising new challenges and unexpected antiheros.     ▓█
+█▓                                                                           ▓█
+█▓   In college I discovered David Chalmers’s 'The Extended Mind' (1998),    ▓█
+█▓   his seminal work in the field of extended cognition, which holds that   ▓█
+█▓   the reach of the mind need not end at the boundaries of skin and        ▓█
+█▓   skull. 'Tools, instrument and other environmental props can under       ▓█
+█▓   certain conditions also count as proper parts of our minds.' The        ▓█
+█▓   implications of this are hard to overstate. The epistemological         ▓█
+█▓   difference between knowing something 'by heart' and being able to call  ▓█
+█▓   it up online in a matter of seconds was quickly vanishing. Mastery of   ▓█
+█▓   the Internet was a crucial step to extending my mind as far and as      ▓█
+█▓   wide as possible.                                                       ▓█
+█▓                                                                           ▓█
+█▓   Now I've worked in IT for over fifteen years, doing everything from     ▓█
+█▓   crawling in ceilings to run Ethernet, automation scripting with Python  ▓█
+█▓   and Bash, virtualizing datacenters, analyzing malware, scouring pcaps,  ▓█
+█▓   sysadmining, more sysadmining, gathering threat intelligence & OSINT,   ▓█
+█▓   deploying honeypots and deception technology, disaster recovery,        ▓█
+█▓   incident response, penetration testing, CNA/CNO/CND and just about      ▓█
+█▓   every type of offense and defense in between.                           ▓█
+█▓                                                                           ▓█
+█▓   My clients, customers and employers have ranged from the financial      ▓█
+█▓   sector, higher education, healthcare, law, high-tech and span from      ▓█
+█▓   startups to SMBs to Fortune 5s.                                         ▓█
+█▓                                                                           ▓█
+█▓   Regardless of what I'm working on, security is always the focal point.  ▓█
+█▓   It is a mindset.                                                        ▓█
+█▓                                                                           ▓█
+█▓   If you only play one position, you don't know the whole game.           ▓█
  █▓                                                                        ▓█
  █▓                                                                        ▓█
  ▐▓▌▄                                                                    ▄▐▓▌
