--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
   ▄▀ ▄  ▀  ▀  ▄▀        ▀▀▀▀▀                    ▀▀▀▀▀▀▀        ▀▀▓░   █▀  ▐█
  █▌  ▀█   ░▓▀▀                                                       ■▀     ▓▌
  ▐▓     ▀■                     ..: DESCRiPTiON :..                         ▓▌
- █▓                                                                        ▓█
- █▓                                                                        ▓█
+  █▓                                                                       ▓█
+ █▓                                                                         ▓█
 █▓   I was barely 13 years old when I watched the world panic and struggle   ▓█
 █▓   to prepare for the first global information catastrophe in history,     ▓█
 █▓   Y2K. The inevitable disaster that never came still taught an            ▓█
@@ -81,7 +81,8 @@
 █▓   hacked Whitehouse.gov and placed a Chinese flag on the homepage,        ▓█
 █▓   practically without consequence. It became abundantly clear to me that  ▓█
 █▓   new era of (public) cyber-war was dawning before my eyes. This was      ▓█
-█▓   evidence again that hackers can and will change the world drastically.  ▓█
+█▓   evidence again that hackers can and will change the world               ▓█
+█▓   drastically.                                                            ▓█
 █▓                                                                           ▓█
 █▓   Warez boards, IRC chans, FXP rushing and the underground world of       ▓█
 █▓   piracy exposed me to the art and challenge of subverting software       ▓█
@@ -98,12 +99,15 @@
 █▓   of eggdrop servers, BNCs, and the infamous 'vim escape' privilege       ▓█
 █▓   escalation. These were 'real' hackers. Compared to them, I knew         ▓█
 █▓   nothing and I knew it. Nothing could've been more inspirational.        ▓█
+█▓                                                                           ▓█
 █▓   Phrack, Packetstorm and SecurityFocus became my new religion. John      ▓█
 █▓   Perry Barlow's 'A Declaration of the Independence of Cyberspace'        ▓█
 █▓   (1996) and The Mentor's 'The Conscience of a Hacker' became the         ▓█
-█▓   bedrock of my Internet philosophy. ‘The Cuckoo’s Egg’ and redacted      ▓█
-█▓   reports of MOONLIGHT MAZE, OP SUNDEVIL and the like became my history   ▓█
-█▓   books.                                                                  ▓█
+█▓   bedrock of my Internet philosophy. ‘The Cuckoo’s Egg’ and               ▓█
+█▓   redacted reports of MOONLIGHT MAZE, OP SUNDEVIL and the like became my  ▓█
+█▓   history books. Incantations of "cheddar_bay.sh",                        ▓█
+█▓   "jessica_biel_naked_in_my_bed.c", "vmsplice()" and "ptrace/kmod"        ▓█
+█▓   allowed me to explore hitherto unimaginable places online.              ▓█
 █▓                                                                           ▓█
 █▓   Countless nights and mornings were spent buried in the depths of        ▓█
 █▓   shadowy IRC channels and foreign language hacker boards. I was          ▓█
@@ -141,8 +145,8 @@
 █▓   It is a mindset.                                                        ▓█
 █▓                                                                           ▓█
 █▓   If you only play one position, you don't know the whole game.           ▓█
- █▓                                                                        ▓█
- █▓                                                                        ▓█
+ █▓                                                                         ▓█
+ █▓                                                                         ▓█
  ▐▓▌▄                                                                    ▄▐▓▌
    ▀░▀                                                                  ▀░▀
 ■▀                                                                          ▀■
@@ -155,42 +159,42 @@
   ▄▀ ▄  ▀  ▀  ▄▀                                            ▀▄  ▀  ▀  ▄ ▀▄
   █▌  ▀█   ░▓▀▀         ..: FRiENDS AND ACCOMPLiCES :..       ▀▀▓░   █▀  ▐█
  ▐▓     ▀■                                                          ■▀     ▓▌
- █▓                                                                        ▓█
- █▓                      (ISC)² • ISSA • OWASP • OffSec                    ▓█
- █▓                     Tor Project • Citizen Lab • BSides                 ▓█
- █▓                       InfraGaurd • AHA! • HoneyNet                     ▓█
- █▓                       Internet Storm Center • SANS                     ▓█
- █▓                       SecurityTube • ShadowServer                      ▓█
- █▓                      BlackHat • SecTor • ISSW • MISP                   ▓█
- █▓                         IEEE • Friends of the EFF                      ▓█
- █▓                          Index of Cyber Security                       ▓█
- █▓                            Effective Altruism                          ▓█
- █▓                             ███-REDACTED-███                           ▓█
- █▓                                                                        ▓█
- █▓                                                                        ▓█
- █▓                                                                        ▓█
- █▓                              ..: LiNKS :..                             ▓█
- █▓                                                                        ▓█
- █▓                                                                        ▓█
- █▓               https://www.linkedin.com/in/jeremygalloway/              ▓█
- █▓               https://github.com/JeremyNGalloway/                      ▓█
- █▓               https://ecstaticsec.tumblr.com                           ▓█
- █▓               mailto:JeremyNGalloway at gmail dotcom                   ▓█
- █▓                                                                        ▓█
- █▓                                                                        ▓█
- █▓                                                                        ▓█
- █▓                              ..: gREETZ :..                            ▓█
- █▓                                                                        ▓█
- █▓                                                                        ▓█ 
- █▓                      iCE, ACiD, iMPURE, Textmod.es                     ▓█
- █▓                      Blocktronics, Sixteen Colors                      ▓█    
- █▓                      evoke, fuel and all other ASCii/ANSi              ▓█
- █▓                      artist groups still releasing                     ▓█
- █▓                                                                        ▓█
- █▓                                                                        ▓█
- █▓                                                                        ▓█ 
- █▓                          Thanks for choosing                           ▓█
- █▓               (C)hallenge (O)f (R)everse (E)ngineering!                ▓█
+█▓                                                                           ▓█
+█▓                      (ISC)² • ISSA • OWASP • OffSec                       ▓█
+█▓                     Tor Project • Citizen Lab • BSides                    ▓█
+█▓                       InfraGaurd • AHA! • HoneyNet                        ▓█
+█▓                       Internet Storm Center • SANS                        ▓█
+█▓                       SecurityTube • ShadowServer                         ▓█
+█▓                      BlackHat • SecTor • ISSW • MISP                      ▓█
+█▓                         IEEE • Friends of the EFF                         ▓█
+█▓                          Index of Cyber Security                          ▓█
+█▓                            Effective Altruism                             ▓█
+█▓                             ███-REDACTED-███                              ▓█
+█▓                                                                           ▓█
+█▓                                                                           ▓█
+█▓                                                                           ▓█
+█▓                              ..: LiNKS :..                                ▓█
+█▓                                                                           ▓█
+█▓                                                                           ▓█
+█▓               https://www.linkedin.com/in/jeremygalloway/                 ▓█
+█▓               https://github.com/JeremyNGalloway/                         ▓█
+█▓               https://ecstaticsec.tumblr.com                              ▓█
+█▓               mailto:JeremyNGalloway at gmail dotcom                      ▓█
+█▓                                                                           ▓█
+█▓                                                                           ▓█
+█▓                                                                           ▓█
+█▓                              ..: gREETZ :..                               ▓█
+█▓                                                                           ▓█
+█▓                                                                           ▓█
+█▓                      iCE, ACiD, iMPURE, Textmod.es                        ▓█
+█▓                      Blocktronics, Sixteen Colors                         ▓█
+█▓                      evoke, fuel and all other ASCii/ANSi                 ▓█
+█▓                      artist groups still releasing                        ▓█
+█▓                                                                           ▓█
+█▓                                                                           ▓█
+█▓                                                                           ▓█
+█▓                          Thanks for choosing                              ▓█
+█▓               (C)hallenge (O)f (R)everse (E)ngineering!                   ▓█
  █▓                                                                        ▓█
  ▐█▓                                                                      ▓█▌
   ▐█▓               ▄■                                  ■▄       ▄▄▀ ▄▀▓▄▓█▌
